# sensor

./: .gitignore  LICENSE  README.md  readme.md  setup.sh
cert/: .gitignore  ca.crt  server.crt  setup.sh
docs/: DTLS Guide.md
nucleo-f439zi-sensor/: .gitignore  Makefile  cert.c  compile_commands.json  dtls-client.c  (+6 more)
sensor-app/: db.sqlite3  diagram.dot  myapp_models.dot  pyproject.toml  run.sh  setup.sh
sensor-app/frontend/: settings.py  urls.py  views.py
sensor-app/frontend/static/css/: dashboard.css
sensor-app/frontend/templates/frontend/: admin.html  admin_sensors.html  archive.html  dashboard.html  index.html  login.html  measurements.html  permission_requests.html  register.html  sensor_requests.html  sensors.html  user.html  user_measurements.html  user_requests.html  user_sensors.html
sensor-server/: .gitignore  client.py  dbcreds.py  diagram.dot  dtls-server.c  dtls_server.py  mailcreds.py  my_server.py  pyproject.toml  run.sh  sensor_server_models.dot  server  server.py  setup.sh  user.sql
sensor-server/apiserver/: anomaly_notifier.py  settings.py  urls.py
sensor-server/config/: dtls_config.json
sensor-server/dtls-server/: .gitignore  Makefile  constants.h  dtls-server.c  dtls_server.c  helpers.c  helpers.h  server  server.c  wolfssl.sh
sensor-server/dtls-server/tests/: test_helpers.c
sensor-server/sensors/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
sensor-server/sensors/migrations/: 0001_initial.py  0002_alter_uzytkownik_email_and_more.py  0003_request.py  0004_rename_powiadomienie_email_uzytkownik_email_notification_and_more.py  0005_remove_uzytkownik_is_admin_and_more.py  0006_alter_uzytkownik_options_uzytkownik_date_joined_and_more.py  0007_remove_uzytkownik_first_name_and_more.py  0008_alter_uzytkownik_options_and_more.py  0009_typpomiaru_jednostka.py  0010_sensor_zatwierdzony.py  0011_remove_sensor_zatwierdzony.py  0012_rename_request_sensorrequest.py  0013_sensorpermissionrequest.py  0014_sensorpermissionrequest_request_date_and_more.py  0015_alter_sensorrequest_adres_mac.py
sensor-server/sensors/static/sensors/css/: style.css
sensor-server/sensors/templates/sensors/: sensors_list.html
sensor-server/tests/: test_models.py  test_sensormeasurement.py  test_sensorregister.py  test_userlogin.py
(+16 files in other folders)
