[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "frontend app for sensor project"
authors = ["Maciej Scheffer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
