[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "frontend app for sensor project"
authors = ["Maciej Scheffer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-cors-headers = "^4.6.0"
requests = "^2.32.3"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
